--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,8 +18,9 @@ leptos_actix = { version = "0.4", optional = true }
 leptos_router = { version = "0.4", features = ["nightly"] }
 wasm-bindgen = "=0.2.87"
 serde = { version = "1.0.173", features = ["derive"] }
-llm = { git = "https://github.com/rustformers/llm.git", branch = "main", optional = true }
+llm = { git = "https://github.com/rustformers/llm.git", branch = "main", optional = true, features = ["cublas"]}
 rand = { version = "0.8.5", optional = true }
+dotenv = {version = "0.15.0", optional = true }
 
 
 [features]
@@ -31,10 +32,14 @@ ssr = [
   "dep:leptos_actix",
   "dep:llm",
   "dep:rand",
+  "dep:dotenv",
   "leptos/ssr",
   "leptos_meta/ssr",
   "leptos_router/ssr"
 ]
+
+[profile.dev.package.ggml-sys]
+opt-level = 3
 
 [package.metadata.leptos]
 # The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name   
@@ -45,7 +50,7 @@ site-root = "target/site"
 # Defaults to pkg	
 site-pkg-dir = "pkg"
 # [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
-style-file = "style/main.scss"
+style-file = "style/output.css"
 # Assets source dir. All files found here will be copied and synchronized to site-root.
 # The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
 #
